--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -6,6 +6,14 @@
     <Nullable>enable</Nullable>
     <RootNamespace>Curacaru.Backend.Core</RootNamespace>
     <PackageId>Curacaru.Backend.Core</PackageId>
+    <Platforms>AnyCPU;ARM64</Platforms>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="SonarAnalyzer.CSharp" Version="9.20.0.85982">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
 
 </Project>
