--- a/Sarimon/appsettings.json
+++ b/Sarimon/appsettings.json
@@ -1,9 +1,34 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Debug",
+            "Microsoft.AspNetCore": "Debug"
+        }
+    },
+    "Serilog": {
+        "Using": [
+            "Serilog.Sinks.Grafana.Loki"
+        ],
+        "MinimumLevel": {
+            "Default": "Debug"
+        },
+        "WriteTo": [
+            {
+                "Name": "GrafanaLoki",
+                "Args": {
+                    "uri": "http://localhost:3100",
+                    "labels": [
+                        {
+                            "key": "app",
+                            "value": "curacaru"
+                        }
+                    ],
+                    "propertiesAsLabels": [
+                        "app"
+                    ]
+                }
+            }
+        ]
+    },
+    "AllowedHosts": "*"
 }
